# CertifyMe

./: .env.example  .gitignore  GlucoBit-v2-BOM.csv  GlucoBit-v2-BOM.xlsx  README.md  install_plugin.ps1  install_plugin.sh  pyproject.toml  startup.sh
kicad_plugin/: __init__.py  action_certifyme.py  metadata.json
src/certifyme/: __init__.py  bom.py  cli.py  config.py  highlight.py  kicad.py  kicad_theme.py  linker.py  open_file.py  parttype.py  sexpr.py  verify.py  xlsx.py
src/certifyme/providers/: __init__.py  base.py  digikey.py
tests/: test_bom.py  test_config.py  test_engine.py  test_highlight.py  test_plugin_highlight.py  test_verify.py
tests/fixtures/: R_0805.kicad_mod  board.kicad_sch  sym.kicad_sym
