[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "certifyme"
version = "0.1.0"
description = "Link KiCad parts to their datasheets automatically (DigiKey API). Ships a KiCad Action Plugin and a CLI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []  # engine uses only the standard library

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
certifyme = "certifyme.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
